Merged revisions 12268-12275,12282-12300 via svnmerge from https://svn.codehaus.org/mule/branches/mule-2.0.x
........
  r12268 | dirk.olmes | 2008-07-09 23:04:59 -0500 (Wed, 09 Jul 2008) | 2 lines
  
  MULE-2620 (BeanPayloadPropertyExtractor tests failing): these tests have been running successfully for some builds now, assuming everything is fixed
........
  r12269 | dfeist | 2008-07-09 23:19:03 -0500 (Wed, 09 Jul 2008) | 9 lines
  
  Some misc. tidying up while looking for bugs with code analysis tools:
  - Consistent use of modifiers in interfaces + some missing final modifiers
  - size() == 0 -> isEmpty(), new Boolean(val) -> Boolean.valueOf(val)
  - Fix couple of potential NPE's, don't throw NPE's, avoid throwing root exception types
  - Duplicate interface implementations
  - Use static inner classes
  - Few other things
........
  r12270 | dirk.olmes | 2008-07-09 23:57:17 -0500 (Wed, 09 Jul 2008) | 2 lines
  
  fix the build
........
  r12271 | tcarlson | 2008-07-10 08:07:36 -0500 (Thu, 10 Jul 2008) | 1 line
  
  Don't need to keep this around for 2.0 anymore
........
  r12272 | tcarlson | 2008-07-10 08:09:13 -0500 (Thu, 10 Jul 2008) | 1 line
  
  Trivial improvements
........
  r12273 | tcarlson | 2008-07-10 08:25:32 -0500 (Thu, 10 Jul 2008) | 1 line
  
  MULE-3234 Not all message transformers/filters/routers support streams
........
  r12274 | dirk.olmes | 2008-07-10 09:04:53 -0500 (Thu, 10 Jul 2008) | 1 line
  
  MULE-2014 (MS specific tests for JAAS): use the exclusion magic from AbstractMuleTestCase. Test remains disabled until I have tested it on windows.
........
  r12275 | dirk.olmes | 2008-07-10 09:38:34 -0500 (Thu, 10 Jul 2008) | 2 lines
  
  MULE-2040 (MS specific tests for JAAS): test runs on Windows and is disabled on Unix platforms
........
  r12282 | dandiep | 2008-07-10 13:05:46 -0500 (Thu, 10 Jul 2008) | 1 line
  
  Handle more input types for xml transformers.
........
  r12283 | dandiep | 2008-07-10 13:16:53 -0500 (Thu, 10 Jul 2008) | 7 lin